@@ -4,12 +4,14 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
 import net.sourceforge.pmd.Rule;
 import net.sourceforge.pmd.RuleContext;
+import net.sourceforge.pmd.RuleSet;
 import net.sourceforge.pmd.lang.ast.Node;
 import net.sourceforge.pmd.util.Benchmark;
 
@@ -20,9 +22,9 @@ import net.sourceforge.pmd.util.Benchmark;
  */
 public abstract class AbstractRuleChainVisitor implements RuleChainVisitor {
     /**
-     * These are all the rules participating in the RuleChain.
+     * These are all the rules participating in the RuleChain, grouped by RuleSet.
      */
-    protected List<Rule> rules = new ArrayList<Rule>();
+    protected Map<RuleSet, List<Rule>> ruleSetRules = new LinkedHashMap<RuleSet, List<Rule>>();
 
     /**
      * This is a mapping from node names to nodes instances for the current AST.
@@ -30,10 +32,13 @@ public abstract class AbstractRuleChainVisitor implements RuleChainVisitor {
     protected Map<String, List<Node>> nodeNameToNodes;
 
     /**
-     * @see RuleChainVisitor#add(Rule)
+     * @see RuleChainVisitor#add(RuleSet, Rule)
      */
-    public void add(Rule rule) {
-        rules.add(rule);
+    public void add(RuleSet ruleSet, Rule rule) {
+	if (!ruleSetRules.containsKey(ruleSet)) {
+	    ruleSetRules.put(ruleSet, new ArrayList<Rule>());
+	}
+	ruleSetRules.get(ruleSet).add(rule);
     }
 
     /**
@@ -50,25 +55,31 @@ public abstract class AbstractRuleChainVisitor implements RuleChainVisitor {
         long end = System.nanoTime();
         Benchmark.mark(Benchmark.TYPE_RULE_CHAIN_VISIT, end - start, 1);
 
-        // For each rule, allow it to visit the nodes it desires
-        int visits = 0;
-        start = System.nanoTime();
-        for (Rule rule: rules) {
-            final List<String> nodeNames = rule.getRuleChainVisits();
-            for (int j = 0; j < nodeNames.size(); j++) {
-                List<Node> ns = nodeNameToNodes.get(nodeNames.get(j));
-                for (Node node: ns) {
-                    // Visit with underlying Rule, not the RuleReference
-                    while (rule instanceof RuleReference) {
-                        rule = ((RuleReference)rule).getRule();
-                    }
-                    visit(rule, node, ctx);
-                }
-                visits += ns.size();
+        // For each RuleSet, only if this source file applies
+        for (RuleSet ruleSet : ruleSetRules.keySet()) {
+            if (!ruleSet.applies(ctx.getSourceCodeFile())) {
+        	continue;
             }
-            end = System.nanoTime();
-            Benchmark.mark(Benchmark.TYPE_RULE_CHAIN_RULE, rule.getName(), end - start, visits);
-            start = end;
+            // For each rule, allow it to visit the nodes it desires
+            int visits = 0;
+            start = System.nanoTime();
+            for (Rule rule: ruleSetRules.get(ruleSet)) {
+                final List<String> nodeNames = rule.getRuleChainVisits();
+                for (int j = 0; j < nodeNames.size(); j++) {
+                    List<Node> ns = nodeNameToNodes.get(nodeNames.get(j));
+                    for (Node node: ns) {
+                        // Visit with underlying Rule, not the RuleReference
+                        while (rule instanceof RuleReference) {
+                            rule = ((RuleReference)rule).getRule();
+                        }
+                        visit(rule, node, ctx);
+                    }
+                    visits += ns.size();
+                }
+                end = System.nanoTime();
+                Benchmark.mark(Benchmark.TYPE_RULE_CHAIN_RULE, rule.getName(), end - start, visits);
+                start = end;
+            }
         }
     }
 
@@ -107,14 +118,21 @@ public abstract class AbstractRuleChainVisitor implements RuleChainVisitor {
 
         // Determine all node types that need visiting
         Set<String> visitedNodes = new HashSet<String>();
-        for (Iterator<Rule> i = rules.iterator(); i.hasNext();) {
-            Rule rule = i.next();
-            if (rule.usesRuleChain()) {
-                visitedNodes.addAll(rule.getRuleChainVisits());
+        for (Iterator<Map.Entry<RuleSet, List<Rule>>> entryIterator = ruleSetRules.entrySet().iterator(); entryIterator.hasNext();) {
+            Map.Entry<RuleSet, List<Rule>> entry = entryIterator.next();
+            for (Iterator<Rule> ruleIterator = entry.getValue().iterator(); ruleIterator.hasNext();) {
+                Rule rule = ruleIterator.next();
+                if (rule.usesRuleChain()) {
+                    visitedNodes.addAll(rule.getRuleChainVisits());
+                }
+                else {
+                    // Drop rules which do not participate in the rule chain.
+                    ruleIterator.remove();
+                }
             }
-            else {
-                // Drop rules which do not participate in the rule chain.
-                i.remove();
+            // Drop RuleSets in which all Rules have been dropped.
+            if (entry.getValue().isEmpty()) {
+        	entryIterator.remove();
             }
         }
 
